03-gitops/archive/longhorn/longhorn-ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: longhorn-ui
#  namespace: longhorn-system
#  annotations:
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
#    cert-manager.io/cluster-issuer: ingress
#spec:
#  ingressClassName: nginx
#  rules:
#    - host: longhorn.cluster
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: longhorn-frontend
#                port:
#                  number: 80
#  tls:
#    - hosts:
#        - longhorn.cluster
#      secretName: longhorn-ui-tls
#---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-public-ui
  namespace: longhorn-system
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://oauth.serhii.link/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth.serhii.link/oauth2/start?rd=https://$host$request_uri"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: longhorn.serhii.link
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
